--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,11 +10,22 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <form class="form-inline" action="/login" method="POST">
-      <div class="form-group mb-2">
-        <input class="form-control" type="text" name="username" placeholder="Username" style="width: 300px; margin: 1em">
-        <button type="submit" class="btn btn-outline-dark">Login</button>
-      </div>
-    </form>
+    <% if (!username) { %>
+      <form class="form-inline" action="/login" method="POST">
+        <div class="form-group mb-2">
+          <input class="form-control" type="text" name="username" placeholder="Username" style="width: 300px; margin: 1em">
+          <button type="submit" class="btn btn-outline-dark">Login</button>
+        </div>
+      </form>
+    <% } %>
+
+    <% if (username) { %>
+      <form class="form-inline" method="GET" action="/urls">
+        <div class="form-group mb-2"></div>
+          <h6 class="card-text">Logged in As: <%= username %></h6>
+          <button type="submit" class="btn btn-outline-dark">Logout</button>
+        </div>
+      </form>
+    <% } %>
   </nav>
 </header>
