--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,7 +10,7 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if (!username) { %>
+    <% if (!user) { %>
       <form class="form-inline" action="/login" method="POST">
         <div class="form-group mb-2">
           <input class="form-control" type="text" name="username" placeholder="Username" style="width: 300px; margin: 1em">
@@ -19,10 +19,10 @@
       </form>
     <% } %>
 
-    <% if (username) { %>
+    <% if (user) { %>
       <form class="form-inline" action="/logout" method="POST">
         <div class="form-group mb-2"></div>
-          <h6 class="card-text">Logged in As: <%= username %></h6>
+          <h6 class="card-text">Logged in As: <%= user.email %></h6>
           <button type="submit" class="btn btn-outline-dark">Logout</button>
         </div>
       </form>
