--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,12 +11,12 @@
       </div>
     </div>
     <% if (!user) { %>
-      <form class="form-inline" action="/login" method="POST">
-        <div class="form-group mb-2">
-          <input class="form-control" type="text" name="username" placeholder="Username" style="width: 300px; margin: 1em">
-          <button type="submit" class="btn btn-outline-dark">Login</button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="/login">Login</a>
+          <a class="nav-item nav-link" href="/register">Register</a>
         </div>
-      </form>
+      </div>
     <% } %>
 
     <% if (user) { %>
