--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -18,7 +18,7 @@
     <div class="card text-center">
       <div class="card-header"></div>
     <main style="margin: 1em;">
-      <h3>Sign up</h3>
+      <h3>Create Account</h3>
       <form class="form-inline" action="/register" method="POST">
         <div class="container-fluid">
           <label for="email">Email Address</label>
@@ -26,7 +26,7 @@
           <label for="password">Password</label>
           <input class="form-control" type="password" name="password" placeholder="Enter Password" style="width: 300px; margin: 1em">
           <div class="mycentered-text">
-            <button type="submit" class="btn btn-success">Sign up with Email</button>
+            <button type="submit" class="btn btn-primary">Register</button>
           </div>
         </div>
       </form>
