--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,6 +10,7 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <div class="navbar-nav ml-auto">
     <% if (!user) { %>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
@@ -22,10 +23,11 @@
     <% if (user) { %>
       <form class="form-inline" action="/logout" method="POST">
         <div class="form-group mb-2"></div>
-          <h6 class="card-text">Logged in As: <%= user.email %></h6>
+          <h6 class="card-text">Logged in: <%= user.email %></h6>
           <button type="submit" class="btn btn-outline-dark">Logout</button>
         </div>
       </form>
     <% } %>
+  </div>
   </nav>
 </header>
