--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -21,7 +21,7 @@
       <form action="/urls/<%= shortURL %>" method="POST">
           <label for="longURL">New URL: </label>
           <input type="text" name="longURL" value="<%= longURL %>" style="width: 300px">
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-success">Submit</button>
       </form>
     </div>
   </div>
