--- a/views/user_login.ejs
+++ b/views/user_login.ejs
@@ -26,7 +26,7 @@
           <label for="password">Password</label>
           <input class="form-control" type="password" name="password" placeholder="Enter Password" style="width: 300px; margin: 1em">
           <div class="mycentered-text">
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-success">Login</button>
           </div>
         </div>
       </form>
